# social_media_project

./: .dockerignore  .editorconfig  .env.example  .gitignore  AGENTS.md  AvatarGroupFeature.md  CONTRIBUTING.md  Dockerfile  FRONTEND.md  FRONTEND_RECREATE.md  FRONTEND_SETUP.md  HoverCardFeature.md  LIGHTSAIL_DEPLOY.md  MILESTONES.md  PLAN.md  RATE_LIMITING_PLAN.md  README.md  RELEASE_1.md  S3-media-feature.md  backend_plan.md  cleanup.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  microblog.db  package-lock.json  pyproject.toml  pytest.ini  script_manual.txt  ui-audit-feed.txt
.github/workflows/: tests.yml
app/: auth.py  comment_cursor.py  database.py  exceptions.py  main.py  models.py  rate_limit.py  requirements-prod.txt  requirements.txt  schemas.py  settings.py
app/queries/: __init__.py  timeline.py
app/routers/: admin.py  auth.py  bookmarks.py  comments.py  media.py  posts.py  users.py
app/services/: README.md  feed_query.py  post_mapper.py  post_write_service.py
app/storage/: s3.py
app/tests/: conftest.py  test_auth.py  test_comments.py  test_feed.py  test_media.py  test_moderation.py  test_profile.py
docker/initdb/: 01-create-test-db.sh
docs/: cleanup.md  frontend.md  milestones.md  plan.md  release-1.md
docs/deploy/: lightsail.md
docs/features/: avatar-group.md  bookmarks.md  comments.md  hover-card.md
frontend/: .gitignore  .prettierignore  .prettierrc  README.md  components.json  eslint.config.js  openapi.json  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  (+1 more)
migrations/: env.py
(+70 files in other folders)
