[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "socia-media-project"
version = "0.1.0"
description = "Portfolio social media backend"
requires-python = ">=3.12"
dynamic = ["dependencies"]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.dynamic]
dependencies = { file = ["app/requirements-prod.txt"] }
